# Safe-Flow-Decomposition

./: CMakeLists.txt  Project_Structure.txt  README.md
benchmarks/: CMakeLists.txt  benchmark_safe_flow.cpp
include/baseline/: baseline_graph.hpp  baseline_spfa.hpp
include/graphs/: aligned_allocator.hpp  concurrent_queue.hpp  csr_graph.hpp  graph_builder.hpp  safe_flow.hpp  spfa_engine.hpp  thread_pool.hpp  types.hpp
include/simd/: avx512_utils.hpp
src/: concurrent_queue.cpp  csr_graph.cpp  graph_builder.cpp  spfa_engine.cpp  thread_pool.cpp
src/simd/: avx512_utils.cpp
tests/: CMakeLists.txt  test_csr_graph.cpp  test_safe_flow.cpp
